Removed hr, fixed spacing on episode box, removed commented code

--- a/resources/css/header-bar.css
+++ b/resources/css/header-bar.css
@@ -85,11 +85,12 @@
     &__top {
 
       h2 {
-        font-size: 1.95em;
+        font-size: 1.55em;
         font-weight: bold;
       }
 
       p {
+        padding-top: 3px;
         font-weight: 1em;
         color: gray;
       }
@@ -99,8 +100,11 @@
     }
 
     &__bottom {
+      display: flex;
+      align-items: center;
+
       svg {
-        width: 40px;
+        width: 30px;
       }
     }
 
